--- a/index.html
+++ b/index.html
@@ -1,78 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Video Landing Page</title>
 </head>
+
 <body>
     <section class="showcase">
-        <div class="video-container">
-            <video src="https://traversymedia.com/downloads/video.mov" autoplay muted loop></video>
-        </div>
         <div class="content">
             <div class="content__main">
-<h1 class="content__mainH1" style="font-style: italic;font-weight: bold;">Michał <span
-        style="color:rgb(219, 170, 113)">Jurczak</span></h1>
-<!-- <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="500" height="96.428"
-                viewBox="0 0 901.817 96.428" style="">
-                <defs>
-                    <linearGradient id="a" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
-                        <stop offset="0" stop-color="#f2e296" />
-                        <stop offset="1" stop-color="#79714b" />
-                    </linearGradient>
-                </defs>
-                <path d="M591.91,334.4c740.73-7.7,733.539-88.025,733.539-88.025L1482.224,334.4Z"
-                    transform="translate(-591.878 -240.967)" stroke="#644909" stroke-width="6" fill="url(#a)" />
-            </svg> -->
-<svg class="content__mainLogo" version="1.0" xmlns="http://www.w3.org/2000/svg" width="100" height="120"
-    viewBox="0 0 271.000000 300.000000" preserveAspectRatio="xMidYMid meet">
-
-    <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
-        <path fill="rgb(180, 110, 17)" d="M1910 2977 c0 -3 7 -21 16 -42 23 -56 6 -67 -55 -33 -55 31 -69 27
--41 -12 11 -15 17 -35 14 -48 -3 -11 2 -46 11 -77 9 -32 14 -59 12 -62 -3 -2
-1 -30 9 -61 7 -31 11 -73 8 -92 -3 -20 1 -62 9 -94 12 -45 13 -63 4 -77 -9
--14 -8 -32 2 -76 7 -32 13 -76 12 -99 -1 -23 4 -54 10 -70 6 -16 15 -54 19
--84 4 -30 15 -95 25 -145 15 -84 16 -146 1 -220 -3 -16 -9 -50 -12 -75 -3 -25
--10 -49 -14 -53 -4 -5 -34 9 -66 29 -159 102 -678 306 -1504 590 -151 52 -292
-101 -312 109 -21 8 -38 11 -38 7 1 -9 7 -12 291 -142 125 -57 225 -109 223
--115 -2 -5 24 -28 59 -50 34 -22 75 -52 90 -67 15 -15 52 -42 81 -59 29 -17
-57 -41 62 -53 5 -11 34 -34 65 -51 31 -16 70 -44 87 -61 17 -17 57 -41 90 -53
-33 -13 71 -34 84 -48 27 -30 80 -58 127 -68 19 -4 52 -25 75 -46 22 -22 45
--39 51 -39 7 0 30 -19 53 -42 46 -47 95 -87 128 -104 36 -19 127 -94 157 -130
-l28 -33 -33 -58 c-99 -179 -242 -371 -331 -446 -29 -24 -137 -102 -242 -172
--184 -124 -262 -183 -180 -135 22 13 54 33 70 45 55 40 299 188 359 217 36 18
-61 25 65 19 4 -5 30 -13 59 -17 51 -6 52 -7 52 -39 0 -26 -14 -51 -63 -112
--97 -119 -221 -310 -246 -376 -17 -44 -6 -32 40 46 111 185 211 319 277 367
-20 15 46 38 57 51 11 13 56 66 98 116 53 63 87 95 105 98 208 42 345 103 486
-214 48 39 94 71 102 71 20 0 122 47 151 70 15 12 41 20 62 20 l37 0 -4 73 c-3
-44 -12 87 -23 110 -24 45 -83 90 -143 107 -31 8 -54 24 -76 51 l-32 40 13 92
-c6 51 12 160 12 242 0 166 -14 242 -57 303 -13 21 -32 65 -41 100 -36 143
--128 348 -219 490 -60 95 -216 281 -216 259z" />
-    </g>
-</svg>
-
-
+                <h1 class="content__mainH1">Michał <span>Jurczak</span></h1>
+                <svg class="content__mainLogo" width="150" height="200" viewBox="0 0 268 295" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g id="Group" filter="url(#filter0_i)">
+                        <g id="Vector">
+                            <path
+                                d="M189 0.300018C189 0.600006 189.7 2.40002 190.6 4.50003C192.9 10.1 191.2 11.2 185.1 7.80002C179.6 4.70001 178.2 5.10001 181 9.00003C182.1 10.5 182.7 12.5 182.4 13.8C182.1 14.9 182.6 18.4 183.5 21.5C184.4 24.7 184.9 27.4 184.7 27.7C184.4 27.9 184.8 30.7 185.6 33.8C186.3 36.9 186.7 41.1 186.4 43C186.1 45 186.5 49.2 187.3 52.4C188.5 56.9 188.6 58.7 187.7 60.1C186.8 61.5 186.9 63.3 187.9 67.7C188.6 70.9 189.2 75.3 189.1 77.6C189 79.9 189.5 83 190.1 84.6C190.7 86.2 191.6 90 192 93C192.4 96 193.5 102.5 194.5 107.5C196 115.9 196.1 122.1 194.6 129.5C194.3 131.1 193.7 134.5 193.4 137C193.1 139.5 192.4 141.9 192 142.3C191.6 142.8 188.6 141.4 185.4 139.4C169.5 129.2 117.6 108.8 35 80.4C19.9 75.2 5.8 70.3 3.8 69.5C1.7 68.7 0 68.4 0 68.8C0.1 69.7 0.7 70 29.1 83C41.6 88.7 51.6 93.9 51.4 94.5C51.2 95 53.8 97.3 57.3 99.5C60.7 101.7 64.8 104.7 66.3 106.2C67.8 107.7 71.5 110.4 74.4 112.1C77.3 113.8 80.1 116.2 80.6 117.4C81.1 118.5 84 120.8 87.1 122.5C90.2 124.1 94.1 126.9 95.8 128.6C97.5 130.3 101.5 132.7 104.8 133.9C108.1 135.2 111.9 137.3 113.2 138.7C115.9 141.7 121.2 144.5 125.9 145.5C127.8 145.9 131.1 148 133.4 150.1C135.6 152.3 137.9 154 138.5 154C139.2 154 141.5 155.9 143.8 158.2C148.4 162.9 153.3 166.9 156.6 168.6C160.2 170.5 169.3 178 172.3 181.6L175.1 184.9L171.8 190.7C161.9 208.6 147.6 227.8 138.7 235.3C135.8 237.7 125 245.5 114.5 252.5C96.1 264.9 88.3 270.8 96.5 266C98.7 264.7 101.9 262.7 103.5 261.5C109 257.5 133.4 242.7 139.4 239.8C143 238 145.5 237.3 145.9 237.9C146.3 238.4 148.9 239.2 151.8 239.6C156.9 240.2 157 240.3 157 243.5C157 246.1 155.6 248.6 150.7 254.7C141 266.6 128.6 285.7 126.1 292.3C124.4 296.7 125.5 295.5 130.1 287.7C141.2 269.2 151.2 255.8 157.8 251C159.8 249.5 162.4 247.2 163.5 245.9C163.696 245.668 164 245.309 164.392 244.848C166.195 242.72 169.849 238.408 173.3 234.3C178.6 228 182 224.8 183.8 224.5C204.6 220.3 218.3 214.2 232.4 203.1C237.2 199.2 241.8 196 242.6 196C244.6 196 254.8 191.3 257.7 189C259.2 187.8 261.8 187 263.9 187H267.6L267.2 179.7C266.9 175.3 266 171 264.9 168.7C262.5 164.2 256.6 159.7 250.6 158C247.5 157.2 245.2 155.6 243 152.9L239.8 148.9L241.1 139.7C241.7 134.6 242.3 123.7 242.3 115.5C242.3 98.9 240.9 91.3 236.6 85.2C235.3 83.1 233.4 78.7 232.5 75.2C228.9 60.9 219.7 40.4 210.6 26.2C204.6 16.7 189 -1.89999 189 0.300018Z"
+                                fill="url(#paint0_linear)" />
+                            <path
+                                d="M189 0.300018C189 0.600006 189.7 2.40002 190.6 4.50003C192.9 10.1 191.2 11.2 185.1 7.80002C179.6 4.70001 178.2 5.10001 181 9.00003C182.1 10.5 182.7 12.5 182.4 13.8C182.1 14.9 182.6 18.4 183.5 21.5C184.4 24.7 184.9 27.4 184.7 27.7C184.4 27.9 184.8 30.7 185.6 33.8C186.3 36.9 186.7 41.1 186.4 43C186.1 45 186.5 49.2 187.3 52.4C188.5 56.9 188.6 58.7 187.7 60.1C186.8 61.5 186.9 63.3 187.9 67.7C188.6 70.9 189.2 75.3 189.1 77.6C189 79.9 189.5 83 190.1 84.6C190.7 86.2 191.6 90 192 93C192.4 96 193.5 102.5 194.5 107.5C196 115.9 196.1 122.1 194.6 129.5C194.3 131.1 193.7 134.5 193.4 137C193.1 139.5 192.4 141.9 192 142.3C191.6 142.8 188.6 141.4 185.4 139.4C169.5 129.2 117.6 108.8 35 80.4C19.9 75.2 5.8 70.3 3.8 69.5C1.7 68.7 0 68.4 0 68.8C0.1 69.7 0.7 70 29.1 83C41.6 88.7 51.6 93.9 51.4 94.5C51.2 95 53.8 97.3 57.3 99.5C60.7 101.7 64.8 104.7 66.3 106.2C67.8 107.7 71.5 110.4 74.4 112.1C77.3 113.8 80.1 116.2 80.6 117.4C81.1 118.5 84 120.8 87.1 122.5C90.2 124.1 94.1 126.9 95.8 128.6C97.5 130.3 101.5 132.7 104.8 133.9C108.1 135.2 111.9 137.3 113.2 138.7C115.9 141.7 121.2 144.5 125.9 145.5C127.8 145.9 131.1 148 133.4 150.1C135.6 152.3 137.9 154 138.5 154C139.2 154 141.5 155.9 143.8 158.2C148.4 162.9 153.3 166.9 156.6 168.6C160.2 170.5 169.3 178 172.3 181.6L175.1 184.9L171.8 190.7C161.9 208.6 147.6 227.8 138.7 235.3C135.8 237.7 125 245.5 114.5 252.5C96.1 264.9 88.3 270.8 96.5 266C98.7 264.7 101.9 262.7 103.5 261.5C109 257.5 133.4 242.7 139.4 239.8C143 238 145.5 237.3 145.9 237.9C146.3 238.4 148.9 239.2 151.8 239.6C156.9 240.2 157 240.3 157 243.5C157 246.1 155.6 248.6 150.7 254.7C141 266.6 128.6 285.7 126.1 292.3C124.4 296.7 125.5 295.5 130.1 287.7C141.2 269.2 151.2 255.8 157.8 251C159.8 249.5 162.4 247.2 163.5 245.9C163.696 245.668 164 245.309 164.392 244.848C166.195 242.72 169.849 238.408 173.3 234.3C178.6 228 182 224.8 183.8 224.5C204.6 220.3 218.3 214.2 232.4 203.1C237.2 199.2 241.8 196 242.6 196C244.6 196 254.8 191.3 257.7 189C259.2 187.8 261.8 187 263.9 187H267.6L267.2 179.7C266.9 175.3 266 171 264.9 168.7C262.5 164.2 256.6 159.7 250.6 158C247.5 157.2 245.2 155.6 243 152.9L239.8 148.9L241.1 139.7C241.7 134.6 242.3 123.7 242.3 115.5C242.3 98.9 240.9 91.3 236.6 85.2C235.3 83.1 233.4 78.7 232.5 75.2C228.9 60.9 219.7 40.4 210.6 26.2C204.6 16.7 189 -1.89999 189 0.300018Z"
+                                stroke="white" />
+                        </g>
+                    </g>
+                    <defs>
+                        <filter id="filter0_i" x="0" y="0.120804" width="267.6" height="298.714"
+                            filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                            <feOffset dy="4" />
+                            <feGaussianBlur stdDeviation="2.5" />
+                            <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
+                            <feColorMatrix type="matrix"
+                                values="0 0 0 0 0.8125 0 0 0 0 0.735312 0 0 0 0 0.710938 0 0 0 1 0" />
+                            <feBlend mode="normal" in2="shape" result="effect1_innerShadow" />
+                        </filter>
+                        <linearGradient id="paint0_linear" x1="133.8" y1="294.835" x2="133.8" y2="0.120789"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#CB7D09" />
+                            <stop offset="1" stop-color="#B67514" stop-opacity="0" />
+                        </linearGradient>
+                    </defs>
+                </svg>
+            <h2 class="content__mainH2">Front end developer</h2>
+            <a href="#about" class="content__Btn">Kontakt</a>
             </div>
-            
-            <h3>Front-end developer</h3>
-            <a href="#about" class="btn">Kontakt</a>
         </div>
     </section>
     <section id="about">
         <h1>O mnie</h1>
         <p>
- Absolwent Politechniki Wrocławskiej, front-end developer, grafik, twórca treści, miłośnik lotnictwa.
+            Absolwent Politechniki Wrocławskiej, front-end developer, grafik, twórca treści.
         </p>
-        <h3>Linki</h3>
-    <div class="social">
-        <a class="social__Btn" href="https://www.facebook.com/profile.php?id=100000925285138" target="_blank"><i class=" fab fa-facebook fa-3x"></i></a>
-        <a class="social__Btn" href="https://github.com/shadowmare358" target="_blank"><i class="fab fa-github fa-3x"></i></a>
-        <a class="social__Btn" href="https://www.linkedin.com/in/micha%C5%82-jurczak-812221161/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-    </div>
+        <h3>LINKI</h3>
+        <div class="social">
+            <a class="social__Btn" href="https://www.facebook.com/profile.php?id=100000925285138" target="_blank"><i
+                    class=" fab fa-facebook fa-3x"></i></a>
+            <a class="social__Btn" href="https://github.com/shadowmare358" target="_blank"><i
+                    class="fab fa-github fa-3x"></i></a>
+            <a class="social__Btn" href="https://www.linkedin.com/in/micha%C5%82-jurczak-812221161/" target="_blank"><i
+                    class="fab fa-linkedin fa-3x"></i></a>
+        </div>
     </section>
 </body>
 </html>
